--- a/rightSideStyles.css
+++ b/rightSideStyles.css
@@ -8,7 +8,52 @@
     width: 340px;
     margin: 30px;
 }
-
 .bottom-border-right {
     background-color: #434141;
+}
+.experience-grid {
+    display: grid; 
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+    margin-bottom: 30px;
+}
+.left-experience-item {
+    width: 110px;
+    height: 50px;
+    font-size: 10px;
+    line-height: 1.3;
+}
+.right-experience-item {
+    width: 220px;
+    height: 50px;
+    font-size: 10px;
+    line-height: 1.3;
+}
+.skills-grid {
+    margin-top: 20px;
+    display: grid;
+    justify-items: baseline;
+    align-items: stretch;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+}
+.skills-item {
+    width: 140px;
+    height: 30px;
+    font-size: 10px;
+}
+
+.right-side-point {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+}
+.right-side-painted-point {
+    background-color: #000000;
+}
+.right-side-non-painted-point {
+    background-color: #dcd6d646;
+}
+.skills-name-width {
+    width: 80px;
 }
