--- a/rightSideStyles.css
+++ b/rightSideStyles.css
@@ -32,8 +32,8 @@
 .skills-grid {
     margin-top: 20px;
     display: grid;
-    justify-items: baseline;
-    align-items: stretch;
+    justify-items: center;
+    align-items: center;
     grid-template-columns: repeat(2, auto);
     grid-gap: 10px;
 }
@@ -41,12 +41,6 @@
     width: 140px;
     height: 30px;
     font-size: 10px;
-}
-
-.right-side-point {
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
 }
 .right-side-painted-point {
     background-color: #000000;
